fluent-gcp filters  (#88)
* chart_deps/fluent/fluentbit/fluentbit-standalone: fluentbit.enabled + set default images

* charts/fluent: remove cri parser

* charts/fluent: key:log for json parser

* chart_deps/fluent/fluentbit/fluentbit-standalone: parsers to main fluentbit-yaml file

* charts/fluent: output loki

* chart_deps/fluent/fluentbit/fluentbit-standalone: use similar approach to fluentbit-operated in regards to loki labels

* charts/fluent: use single quotes + fix timestamp

* charts/fluent: try lowercase lua plugin

* chart_deps/fluent/fluentbit/fluentbit-standalone: fix  fluent-bit.yaml + consume all controll-plane logs

* charts/fluent: remove test data

* charts/fluent: remove test data

* charts/fluent: audit logs

* chart_deps/fluent/fluentbit/fluentbit-standalone: mount secret by default

* charts/fluent: test

* chats/fluent: audit fix metadata removal
charts/grafana: update services dashboard
charts/fluent: remove metadata managed fields
new global cloud.type + enable fluentbit-gcp based on it
charts/fluent: controll-plane process all files
charts/environment: move thanos int configs to values.yaml

* changelog: update

* charts/fluent: update fluentbit image

* chart_deps/fluent/fluentbit/fluentbit-standalone: use debug image

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/fluentbit.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/fluentbit.yaml
@@ -1,6 +1,7 @@
 {{- $labels := include "fluentbit.labels" $ | fromYaml }}
-{{- $fluentbit := .Values.fluentbit }}
+{{- $fluentbit := mustDeepCopy .Values.fluentbit }}
 
+{{- if $fluentbit.enabled }}
 {{- $serviceAccount := $fluentbit.serviceAccount }}
 {{- $serviceAccount = set $serviceAccount "name" (include "fluentbit.serviceAccountName" .) }}
 {{- $service := $fluentbit.service }}
@@ -17,6 +18,8 @@
 {{- $fluentbit = set $fluentbit "selectorLabels" $service.selectorLabels }}
 {{- $fluentbit = set $fluentbit "serviceAccountName" $serviceAccount.name }}
 {{- $fluentbit = set $fluentbit "containerName" .Chart.Name  }}
+{{- $fluentbit = set $fluentbit "volumes" (include "fluentbit.volumes" . | fromYaml ).volumes  }}
+{{- $fluentbit = set $fluentbit "volumeMounts" (include "fluentbit.volumeMounts" . | fromYaml ).volumeMounts  }}
 
 {{- range $name, $pvc := $fluentbit.pvcs }}
 {{- $pvc = set $pvc "name" ( printf "%s-%s" (include "fluentbit.fullname" $ )  $name ) }}
@@ -32,6 +35,7 @@
 {{- include "core.serviceAccount" (list . $labels $fluentbit.serviceAccount )}}
 {{- include "core.service" (list . $labels $service )}}
 {{- include "prometheus.serviceMonitor" (list $ $labels $fluentbit.serviceMonitor) }}
-{{- if .Values.statefulsetEnabled }}
+{{- if $fluentbit.statefulsetEnabled }}
 {{- include "core.statefulset" (list $ $labels $fluentbit ) }}
+{{- end }}
 {{- end }}
