--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -280,7 +280,6 @@ fluentbit:
 
   fluentbit:
     enabled: true
-    image: ghcr.io/fluent/fluent-operator/fluent-bit:4.0.9
     positionDB:
       hostPath:
         path: /var/lib/fluent-bit/
@@ -314,24 +313,80 @@ fluentbit-gcp:
     control-plane:
       name: tail
       tag: kube.control-plane.*
-      path: "/var/log/k8s/kube-proxy/*/*/*/*.json"
+      path: "/var/log/k8s/container.googleapis.com/*/*/*/*/*"
       read_from_head: true
-      parser: cri
-      mem_buf_limit: 100MB
+      mem_buf_limit: 300MB
       skip_long_lines: true
       skip_empty_lines: true
       db: /fluent-bit/buffers/k8s.db
       db.sync: Normal
       storage.type: memory
-
+    audit:
+      name: tail
+      tag: kube.audit.*
+      path: "/var/log/k8s/cloudaudit.googleapis.com/*/*/*/*/*"
+      read_from_head: true
+      mem_buf_limit: 300MB
+      skip_empty_lines: true
+      db: /fluent-bit/buffers/audit.db
+      db.sync: Normal
+      storage.type: memory
+  filters:
+    - name: parser
+      match: '*'
+      key_name: log
+      parser: json
+    - name: modify
+      match: '*'
+      hard_rename: severity    level
+    - name: lua
+      match: "*"
+      code: |
+        function level_lower_case(tag, timestamp, record)
+            if record["level"] then
+               record["level"] = string.lower(tostring(record["level"]))
+            end
+            return 1, timestamp, record
+        end
+      call: level_lower_case
   outputs:
-    stdout:
-      name: stdout
+    control-plane:
+      name: loki
       match: 'kube.control-plane.*'
+      host: 'loki-{{ .Values.global.env.name }}-write.loki.svc.cluster.local'
+      port: 3100
+      labels:
+        env: '{{ .Values.global.env.name }}'
+        app_kubernetes_io_instance: $resource['labels']['component_name']
+        app_kubernetes_io_name: $resource['labels']['component_name']
+        job: 'fluentbit-control-plane'
+        level: $level
+        node: $labels['compute.googleapis.com/resource_name']
+      remove_keys: insertId,labels,logName,receiveTimestamp,resource
+    audit:
+      name: loki
+      match: 'kube.audit.*'
+      host: 'loki-{{ .Values.global.env.name }}-write.loki.svc.cluster.local'
+      port: 3100
+      labels:
+        env: '{{ .Values.global.env.name }}'
+        resource_name: $protoPayload['resourceName']
+        principal: $protoPayload['authenticationInfo']['principalEmail']
+        method_name: $protoPayload['methodName']
+        job: 'fluentbit-k8s-audit'
+        level: $level
+      remove_keys: insertId,logName,operation,receiveTimestamp,resource,response['metadata']['managedFields'],response['spec']['metadata']['managedFields']
+
+  parsers:
+    json:
+      name: json
       format: json
+      time_key: timestamp
+      time_format: '%Y-%m-%dT%H:%M:%S.%LZ'
 
 
   fluentbit:
+    enabled: true
     serviceAccount:
       create: false
       name: fluent
@@ -344,8 +399,6 @@ fluentbit-gcp:
       gke-gcsfuse/volumes: 'true'
       gke-gcsfuse/ephemeral-storage-request: '500Mi'
 
-    image: "ghcr.io/fluent/fluent-operator/fluent-bit:4.0.9-debug"
-
     resources:
       limits:
         cpu: 500m
@@ -357,19 +410,12 @@ fluentbit-gcp:
     volumeMounts:
       - name: gcsfuse
         mountPath: /var/log/k8s
-      - mountPath: /fluent-bit/config
-        name: config
-        readOnly: true
       - name: buffers
         mountPath: /fluent-bit/buffers
     volumes:
       - name: gcsfuse
         persistentVolumeClaim:
           claimName: '{{ include "fluentbit.fullname" $ }}-gcsfuse'
-      - name: config
-        secret:
-          defaultMode: 420
-          secretName: '{{ include "fluentbit.fullname"  $}}-config'
       - name: buffers
         persistentVolumeClaim:
           claimName: '{{ include "fluentbit.fullname" $ }}-buffers'
