--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -99,6 +99,7 @@ chart_apps:
         access:
           teams: ["admin", "dev", "pm", "qa"]
           emails: []
+      {{- if .Values.externalEnvs }}
       datasource:
         datasources:
           {{- range $env_name, $env_obj := .Values.externalEnvs }}
@@ -116,6 +117,7 @@ chart_apps:
                 timeout: 60
               url: https://loki.{{ $env_obj.domain }}
           {{- end }}
+      {{- end }}
   konghq:
     enabled: false
     values: |
