charts/chart_deps/app/core: core.ingress use same input types and implementation as other templates

--- a/charts/argocd/templates/ingresses.yaml
+++ b/charts/argocd/templates/ingresses.yaml
@@ -1,5 +1,5 @@
 {{- range $ingress_name, $ingress_obj := .Values.ingresses }}
 {{- $labels := include "argocd.labels" $ | fromYaml }}
 {{- $labels := set $labels "app.kubernetes.io/name" (printf "%s-%s" (get $labels "app.kubernetes.io/name") $ingress_name )}}
-{{- include "core.ingress" (list $ (toYaml $labels) $ingress_obj )}}
+{{- include "core.ingress" (list $ $labels $ingress_obj )}}
 {{- end }}
