--- a/charts/chart_deps/app/common/templates/ingress.yaml
+++ b/charts/chart_deps/app/common/templates/ingress.yaml
@@ -1,1 +1,1 @@
-{{- include "core.ingress" (list . (include "common.labels" .) .Values.ingress )}}
+{{- include "core.ingress" (list . (include "common.labels" . | fromYaml) .Values.ingress )}}
