--- a/charts/grafana/templates/ingresses.yaml
+++ b/charts/grafana/templates/ingresses.yaml
@@ -1,3 +1,3 @@
 {{- range $ingress_name, $ingress_obj := .Values.ingresses }}
-{{- include "core.ingress" (list $ (include "grafana.labels" $) $ingress_obj )}}
+{{- include "core.ingress" (list $ (include "grafana.labels" $ | fromYaml) $ingress_obj )}}
 {{- end }}
