--- a/charts/loki/templates/ingresses.yaml
+++ b/charts/loki/templates/ingresses.yaml
@@ -1,5 +1,5 @@
 {{- range $ingress_name, $ingress_obj := .Values.ingresses }}
 {{- $labels := include "loki.labels" $ | fromYaml }}
 {{- $labels := set $labels "app.kubernetes.io/component"  $ingress_name }}
-{{- include "core.ingress" (list $ (toYaml $labels) $ingress_obj )}}
+{{- include "core.ingress" (list $ $labels $ingress_obj )}}
 {{- end }}
