--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/fluentbit.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/fluentbit.yaml
@@ -34,6 +34,7 @@
 {{- include "core.clusterrole" (list . $labels  $fluentbit.clusterRole )}}
 {{- include "core.serviceAccount" (list . $labels $fluentbit.serviceAccount )}}
 {{- include "core.service" (list . $labels $service )}}
+{{- include "core.ingress" (list . $labels $fluentbit.ingress )}}
 {{- include "prometheus.serviceMonitor" (list $ $labels $fluentbit.serviceMonitor) }}
 {{- if $fluentbit.statefulsetEnabled }}
 {{- include "core.statefulset" (list $ $labels $fluentbit ) }}
