--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
@@ -156,3 +156,22 @@ fluentbit:
     endpoints:
       - targetPort: 9355
         path: /metrics
+  ingress:
+    enabled: false
+    name: '{{ include "fluentbit.fullname" . }}'
+    className: ""
+    service:
+      port: 80
+      name: '{{ .Values.fluentbit.service.name }}'
+    annotations: {}
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: chart-example.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
