--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ charts/**/charts
 !charts/chart_deps/app/common/charts
 !charts/chart_deps/fluent/fluentbit/fluentbit-operated/charts
 !charts/chart_deps/fluent/fluentbit/fluentbit-standalone/charts
+!charts/chart_deps/postgres/postgres-cluster/charts
