--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -34,3 +34,154 @@ podMonitor:
   prometheusSelector: {}
   podTargetLabels: []
   podMetricsEndpoints: {}
+
+fluentbit:
+  enabled: false
+  additionalVolumes:
+  - name: fluent-bit-config
+    targetContainers:
+    - fluent-bit
+    volumeSource:
+      secret:
+        secretName: '{{ .Release.Name }}-fluentbit-config'
+    mountPath: /fluent-bit/config
+  sidecar:
+    name: 'fluent-bit'
+    image: 'ghcr.io/fluent/fluent-operator/fluent-bit:4.1.1-debug'
+    resources:
+      limits:
+        cpu: 500m
+        memory: 500Mi
+      requests:
+        cpu: 10m
+        memory: 25Mi
+    env:
+    - name: NODE_NAME
+      valueFrom:
+        fieldRef:
+          fieldPath: spec.nodeName
+    - name: PG_SPILO_ROLE
+      valueFrom:
+        fieldRef:
+          apiVersion: v1
+          fieldPath: metadata.labels['spilo-role']
+    - name: APP_K8S_IO_NAME
+      valueFrom:
+        fieldRef:
+          apiVersion: v1
+          fieldPath: metadata.labels['app.kubernetes.io/name']
+    - name: APP_K8S_IO_INSTANCE
+      valueFrom:
+        fieldRef:
+          apiVersion: v1
+          fieldPath: metadata.labels['app.kubernetes.io/instance']
+    - name: APP_K8S_IO_VERSION
+      valueFrom:
+        fieldRef:
+          apiVersion: v1
+          fieldPath: metadata.labels['app.kubernetes.io/version']
+  inputs:
+    postgres:
+      name: tail
+      tag: kube.postgres.*
+      path: "/home/postgres/pgdata/pgroot/pg_log/*.json"
+      read_from_head: true
+      skip_long_lines: true
+      refresh_interval: 10
+      mem_buf_limit: 300MB
+      ignore_older: 24h
+      skip_empty_lines: true
+      db: /fluent-bit/pg.db
+      storage.type: memory
+      static_batch_size: 150M
+  filters:
+  - name: parser
+    match: '*'
+    key_name: log
+    parser: json
+  - name: modify
+    match: '*'
+    hard_rename:
+    - error_severity level
+    - ps session_state
+  - name: lua
+    match: "*"
+    code: |
+      function level_lower_case(tag, timestamp, record)
+          code = 0
+          if record["level"] then
+              if record["level"] == "WARNING" then
+                  record["level"] = "warn"
+              end
+              if record["level"] == "LOG" then
+                  record["level"] = "info"
+              end
+              if string.match(record["level"], "DEBUG") then
+                  record["level"] = "debug"
+              end
+              record["level"] = string.lower(tostring(record["level"]))
+              code = 1
+          end
+          return code, timestamp, record
+      end
+    call: level_lower_case
+  parsers:
+    json:
+      name: json
+      format: json
+      time_key: timestamp
+      time_format: '%Y-%m-%d %H:%M:%S.%L %Z'
+  outputs:
+    stdout:
+      name: loki
+      match: 'kube.postgres.*'
+      host: 'loki-{{ .Values.global.env.name }}-write.loki.svc.cluster.local'
+      port: 3100
+      labels:
+        env: '{{ .Values.global.env.name }}'
+        app_kubernetes_io_instance: ${APP_K8S_IO_INSTANCE}
+        app_kubernetes_io_name: ${APP_K8S_IO_NAME}
+        app_kubernetes_io_version: ${APP_K8S_IO_VERSION}
+        container: 'postgres'
+        job: 'fluentbit-postgres'
+        level: $level
+        namespace: ${POD_NAMESPACE}
+        node: ${NODE_NAME}
+        pod: ${HOSTNAME}
+        spilo_role: ${PG_SPILO_ROLE}
+        stream: 'file'
+
+secrets:
+  fluentbit-config:
+    data:
+      fluent-bit.yaml: |
+        {{- range $name, $parser := .Values.fluentbit.parsers }}
+        parsers:
+        - {{ toYaml $parser | nindent 2 | trim }}
+        {{- end }}
+        pipeline:
+          {{- if .Values.fluentbit.inputs }}
+          inputs:
+          {{- range $name, $input := .Values.fluentbit.inputs }}
+          - {{ tpl (toYaml $input) $ | nindent 4 | trim }}
+          {{- end }}
+          {{- end }}
+          {{- if .Values.fluentbit.filters }}
+          filters:
+          {{- range $filter := .Values.fluentbit.filters }}
+          - {{ tpl (toYaml $filter) $ | nindent 4 | trim }}
+          {{- end }}
+          {{- end }}
+          {{- if .Values.fluentbit.filters }}
+          outputs:
+          {{- range $name, $output := .Values.fluentbit.outputs }}
+          {{- if eq $output.name "loki" }}
+          {{- $labels := list }}
+          {{- range $label_name, $label_value := $output.labels }}
+          {{- $labels = append $labels (printf "%s=%s" $label_name $label_value) }}
+          {{- end }}
+          {{- $output := set $output "labels" (join "," $labels )}}
+          {{- end }}
+          - {{ tpl (toYaml $output) $ | nindent 4 | trim }}
+          {{- end }}
+          {{- end }}
