test fix unmarshaling JSON

--- a/charts/chart_deps/postgres/postgres-cluster/templates/postgres.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/templates/postgres.yaml
@@ -1,4 +1,4 @@
-{{- $additionalVolumes := include "postgres-cluster.additionalVolumes" . | fromYaml}}
+{{- $additionalVolumes := include "postgres-cluster.additionalVolumes" . | fromYamlArray}}
 {{- $defaultSidecars := include "postgres-cluster.defaultSidecars" . | fromYaml }}
 {{/*
 If sidecar has the same key as the default sidecar
