--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -45,7 +45,7 @@ fluentbit:
     - fluent-bit
     volumeSource:
       secret:
-        secretName: '{{ .Release.Name }}-fluentbit-config'
+        secretName:  printf "%s-%s" (include 'postgres-cluster.fullname' -fluentbit-config)
     mountPath: /fluent-bit/config
   sidecars:
     fluentbit:
