--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -142,7 +142,7 @@ fluentbit:
       port: 3100
       labels:
         env: '{{ .Values.global.env.name }}'
-        app_kubernetes_io_instance: ${APP_K8S_IO_INSTANCE}
+        app_kubernetes_io_instance: '{{ .Release.Name }}'
         app_kubernetes_io_name: ${APP_K8S_IO_NAME}
         app_kubernetes_io_version: ${APP_K8S_IO_VERSION}
         container: 'postgres'
