change log file name

--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -12,7 +12,7 @@ postgresql:
     effective_io_concurrency: '200'
     log_destination: 'jsonlog'
     log_rotation_age: '1h'
-    #log_filename: 'postgresql-%H.log'
+    log_filename: 'postgresql-%u-%H.log'
 env: {}
 volume: {}
 podAnnotations: {}
