--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -11,8 +11,6 @@ postgresql:
     random_page_cost: '1.1'
     effective_io_concurrency: '200'
     log_destination: 'jsonlog'
-    log_rotation_age: '1h'
-    log_filename: 'postgresql-%u-%H.log'
 env: {}
 volume: {}
 podAnnotations: {}
@@ -72,14 +70,13 @@ fluentbit:
     postgres:
       name: tail
       tag: kube.postgres.*
-      path: "/home/postgres/pgdata/pgroot/pg_log/*.json"
+      path: '/home/postgres/pgdata/pgroot/pg_log/*.json'
       read_from_head: true
       skip_long_lines: true
       refresh_interval: 10
       mem_buf_limit: 300MB
-      ignore_older: 30m
       skip_empty_lines: true
-      db: /fluent-bit/pg.db
+      db: '/home/postgres/pgdata/pgroot/pg_log/postgres.db'
       storage.type: memory
       static_batch_size: 150M
   filters:
