--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -70,13 +70,13 @@ fluentbit:
     postgres:
       name: tail
       tag: kube.postgres.*
-      path: '/home/postgres/pgdata/pgroot/pg_log/*.json'
+      path: '/fluent-bit/*.json'
       read_from_head: true
       skip_long_lines: true
       refresh_interval: 10
       mem_buf_limit: 300MB
       skip_empty_lines: true
-      db: '/home/postgres/pgdata/pgroot/pg_log/postgres.db'
+      db: '/fluent-bit/postgres.db'
       storage.type: memory
       static_batch_size: 150M
   filters:
