--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -37,6 +37,48 @@ podMonitor:
 
 fluentbit:
   enabled: false
+  additionalVolumes:
+  - name: fluent-bit-config
+    targetContainers:
+    - fluent-bit
+    volumeSource:
+      secret:
+        secretName: '{{ include "postgres-cluster.fullname" $}}-fluentbit-config'
+    mountPath: /fluent-bit/config
+  sidecars:
+    fluentbit:
+      name: 'fluent-bit'
+      image: 'ghcr.io/fluent/fluent-operator/fluent-bit:4.1.1-debug'
+      resources:
+        limits:
+          cpu: 500m
+          memory: 500Mi
+        requests:
+          cpu: 10m
+          memory: 25Mi
+      env:
+        NODE_NAME:
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        APP_K8S_IO_NAME:
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: metadata.labels['app.kubernetes.io/name']
+  inputs:
+    postgres:
+      name: tail
+      tag: kube.postgres.*
+      path: '/home/postgres/pgdata/pgroot/pg_log/*.json'
+      read_from_head: true
+      skip_long_lines: true
+      refresh_interval: 10
+      mem_buf_limit: 300MB
+      skip_empty_lines: true
+      db: '/home/postgres/pgdata/pgroot/pg_log/postgres.db'
+      storage.type: memory
+      static_batch_size: 150M
   filters:
   - name: parser
     match: '*'
@@ -74,6 +116,23 @@ fluentbit:
       format: json
       time_key: timestamp
       time_format: '%Y-%m-%d %H:%M:%S.%L %Z'
+  outputs:
+    stdout:
+      name: loki
+      match: 'kube.postgres.*'
+      host: 'loki-{{ .Values.global.env.name }}-write.loki.svc.cluster.local'
+      port: 3100
+      labels:
+        env: '{{ .Values.global.env.name }}'
+        app_kubernetes_io_instance: '{{ .Release.Name }}'
+        app_kubernetes_io_name: '${APP_K8S_IO_NAME}'
+        container: 'postgres'
+        job: 'fluentbit-postgres'
+        level: '$level'
+        namespace: '${POD_NAMESPACE}'
+        node: '${NODE_NAME}'
+        pod: '${HOSTNAME}'
+        stream: 'file'
 
 secrets:
   fluentbit-config:
