--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -57,9 +57,10 @@ fluentbit:
           cpu: 10m
           memory: 25Mi
       env:
-        NODE_NAME:
+        POD_NODE_NAME:
           valueFrom:
             fieldRef:
+              apiVersion: v1
               fieldPath: spec.nodeName
         APP_K8S_IO_NAME:
           valueFrom:
@@ -130,7 +131,7 @@ fluentbit:
         job: 'fluentbit-postgres'
         level: '$level'
         namespace: '${POD_NAMESPACE}'
-        node: '${NODE_NAME}'
+        node: '${POD_NODE_NAME}'
         pod: '${HOSTNAME}'
         stream: 'file'
 
