--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/Chart.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/Chart.yaml
@@ -11,3 +11,6 @@ dependencies:
   - name: prometheus-lib
     version: 0.1.0
     repository: file://../../../prometheus/lib
+  - name: fluentbit-lib
+    version: 0.1.0
+    repository: file://../lib
