--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/secret.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/secret.yaml
@@ -1,5 +1,5 @@
 {{- range $name, $secret := .Values.secrets }}
 {{- $labels := include "fluentbit.labels" $ | fromYaml }}
 {{- $secret = set $secret "name" ( printf "%s-%s" (include "fluentbit.fullname" $ )  $name ) }}
-{{- include "core.secret" (list $ $labels $secret ) }}
+{{- include "fluentbit.secret" (list $ $labels $secret ) }}
 {{- end }}
