refactor fluentbit-standalone secret

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/secret.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/secret.yaml
@@ -1,5 +1,10 @@
-{{- range $name, $secret := .Values.secrets }}
+{{- if .Values.enabled }}
+{{- $parsers := .Values.parsers }}
+{{- $service := .Values.service }}
+{{- $inputs := .Values.inputs }}
+{{- $filters := .Values.filters }}
+{{- $outputs := .Values.outputs }}
 {{- $labels := include "fluentbit.labels" $ | fromYaml }}
-{{- $secret = set $secret "name" ( printf "%s-%s" (include "fluentbit.fullname" $ )  $name ) }}
-{{- include "fluentbit.secret" (list $ $labels $secret ) }}
+{{- $name := printf "%s-%s" (include "fluentbit.fullname" $ ) "config" }}
+{{- include "fluentbit.secret" (list $ $labels $name $parsers $service $inputs $filters $outputs ) }}
 {{- end }}
