--- a/charts/chart_deps/postgres/postgres-cluster/templates/secret.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/templates/secret.yaml
@@ -1,7 +1,6 @@
 {{- if .Values.fluentbit.enabled }}
-{{- $secret := {} }}
+{{- $secret := dict "name" ( printf "%s-%s" (include "postgres-cluster.fullname" $ ) "fluentbit-config" ) }}
 {{- $labels := include "postgres-cluster.labels" $ | fromYaml }}
-{{- $secret = set $secret "name" ( printf "%s-%s" (include "postgres-cluster.fullname" $ ) "fluentbit-config" ) }}
 {{- $secret = set $secret "parsers" .Values.fluentbit.parsers }}
 {{- $secret = set $secret "service .Values.fluentbit.service }}
 {{- $secret = set $secret "inputs" .Values.fluentbit.inputs }}
