--- a/charts/chart_deps/postgres/postgres-cluster/templates/secret.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/templates/secret.yaml
@@ -2,7 +2,7 @@
 {{- $secret := dict "name" ( printf "%s-%s" (include "postgres-cluster.fullname" $ ) "fluentbit-config" ) }}
 {{- $labels := include "postgres-cluster.labels" $ | fromYaml }}
 {{- $secret = set $secret "parsers" .Values.fluentbit.parsers }}
-{{- $secret = set $secret "service .Values.fluentbit.service }}
+{{- $secret = set $secret "service" .Values.fluentbit.service }}
 {{- $secret = set $secret "inputs" .Values.fluentbit.inputs }}
 {{- $secret = set $secret "filters" .Values.fluentbit.filters }}
 {{- $secret = set $secret "outputs" .Values.fluentbit.outputs }}
