--- a/charts/chart_deps/postgres/postgres-cluster/Chart.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/Chart.yaml
@@ -7,4 +7,4 @@ version: 0.1.0
 dependencies:
   - name: fluentbit-lib
     version: 0.1.0
-    repository: file://../../fluent/fluentbit/lib/
+    repository: file://../../fluent/fluentbit/lib
