--- a/charts/chart_deps/postgres/postgres-cluster/templates/secret.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/templates/secret.yaml
@@ -7,5 +7,5 @@
 {{- $secret = set $secret "filters" .Values.fluentbit.filters }}
 {{- $secret = set $secret "outputs" .Values.fluentbit.outputs }}
 {{- $secret = set $secret "annotations" .Values.fluentbit.annotations }}
-{{- include "fluenbit.secret" (list $ $labels $secret ) }}
+{{- include "fluentbit.secret" (list $ $labels $secret ) }}
 {{- end }}
