fix f-b secret tmpl

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/secret.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/secret.yaml
@@ -1,10 +1,11 @@
 {{- if .Values.enabled }}
-{{- $parsers := .Values.parsers }}
-{{- $service := .Values.service }}
-{{- $inputs := .Values.inputs }}
-{{- $filters := .Values.filters }}
-{{- $outputs := .Values.outputs }}
-{{- $labels := include "fluentbit.labels" $ | fromYaml }}
-{{- $name := printf "%s-%s" (include "fluentbit.fullname" $ ) "config" }}
-{{- include "fluentbit.secret" (list $ $labels $name $parsers $service $inputs $filters $outputs ) }}
+{{- $secret := dict "name" ( printf "%s-%s" (include "postgres-cluster.fullname" $ ) "config" ) }}
+{{- $labels := include "postgres-cluster.labels" $ | fromYaml }}
+{{- $secret = set $secret "parsers" .Values.parsers }}
+{{- $secret = set $secret "service" .Values.configs }}
+{{- $secret = set $secret "inputs" .Values.inputs }}
+{{- $secret = set $secret "filters" .Values.filters }}
+{{- $secret = set $secret "outputs" .Values.outputs }}
+{{- $secret = set $secret "annotations" .Values.annotations }}
+{{- include "fluentbit.secret" (list $ $labels $secret ) }}
 {{- end }}
