--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/secret.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/templates/secret.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.enabled }}
-{{- $secret := dict "name" ( printf "%s-%s" (include "postgres-cluster.fullname" $ ) "config" ) }}
-{{- $labels := include "postgres-cluster.labels" $ | fromYaml }}
+{{- $secret := dict "name" ( printf "%s-%s" (include "fluentbit.fullname" $ ) "config" ) }}
+{{- $labels := include "fluentbit.labels" $ | fromYaml }}
 {{- $secret = set $secret "parsers" .Values.parsers }}
 {{- $secret = set $secret "service" .Values.configs }}
 {{- $secret = set $secret "inputs" .Values.inputs }}
